--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,6 @@
     "cinttypes": "cpp"
   },
   "cmake.debugConfig": {
-    "args": ["../examples/script.prism"]
+    "args": ["../examples/script.v0.prism"]
   }
 }
