--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,7 +86,9 @@
     "stop_token": "cpp",
     "text_encoding": "cpp",
     "thread": "cpp",
-    "cinttypes": "cpp"
+    "cinttypes": "cpp",
+    "list": "cpp",
+    "set": "cpp"
   },
   "cmake.debugConfig": {
     "args": ["../examples/script.prism"]
