--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,7 +88,8 @@
     "thread": "cpp",
     "cinttypes": "cpp",
     "list": "cpp",
-    "set": "cpp"
+    "set": "cpp",
+    "__tree": "cpp"
   },
   "cmake.debugConfig": {
     "args": ["../examples/script.prism"]
