add a basic test

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -27,3 +27,7 @@ jobs:
         with:
           name: prism-linux-x64
           path: prism-release
+      - name: Test
+        run: |
+          cd build-cmake
+          ctest -j
