--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Create Package
         run: |
           mkdir prism-release
-          mv build-cmake/prism prism-release/
+          cp build-cmake/prism prism-release/
       - name: Publish packaged artifacts
         uses: actions/upload-artifact@v4
         with:
