fix error with no argument

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,6 @@
     "__tree": "cpp"
   },
   "cmake.debugConfig": {
-    "args": ["../examples/script.prism"]
+    "args": ["../examples/script.opengl.fs"]
   }
 }
