--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -24,3 +24,8 @@ jobs:
         run: |
           cd build/x64
           ctest -j -C Debug
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: build-cmake/Testing/Temporary
