--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,13 +9,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        config: [Release, Debug]
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: sudo apt-get install cmake ninja-build libbz2-dev
       - name: Build
         run: |
-          cmake -H. -Bbuild-cmake -GNinja -DCMAKE_BUILD_TYPE=Release
+          cmake -H. -Bbuild-cmake -GNinja -DCMAKE_BUILD_TYPE=${{ matrix.config }}
           cmake --build build-cmake -j
       - name: Create Package
         run: |
@@ -23,6 +26,7 @@ jobs:
           cp build-cmake/prism prism-release/
           cp "$(ldconfig -p | grep libbz2.so.1.0 | tr ' ' '\n' | grep /| head -n1)" prism-release/
       - name: Publish packaged artifacts
+        if: ${{ matrix.config == 'Release' }}
         uses: actions/upload-artifact@v4
         with:
           name: prism-linux-x64
