--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -9,19 +9,23 @@ on:
 jobs:
   build:
     runs-on: macOS-latest
+    strategy:
+      matrix:
+        config: [Release, Debug]
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: brew install cmake ninja xcodes
       - name: Build
         run: |
-          cmake -H. -Bbuild-cmake -GNinja -DCMAKE_BUILD_TYPE=Release
+          cmake -H. -Bbuild-cmake -GNinja -DCMAKE_BUILD_TYPE=${{ matrix.config }}
           cmake --build build-cmake -j
       - name: Create Package
         run: |
           mkdir prism-release
           cp build-cmake/prism prism-release/
       - name: Publish packaged artifacts
+        if: ${{ matrix.config == 'Release' }}
         uses: actions/upload-artifact@v4
         with:
             name: prism-mac-bin
