--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,10 +20,11 @@ jobs:
           cmake -S . -B "build/x64" -G "Visual Studio 17 2022" -T ${{ matrix.toolchain }} -A x64 -DCMAKE_BUILD_TYPE:STRING=${{ matrix.config }}
           cmake --build ./build/x64
       - name: Publish packaged artifacts
+        if: ${{ matrix.config == 'Release' }}
         uses: actions/upload-artifact@v4
         with:
-          name: prism-windows-x64
-          path: build/x64/Debug/prism.exe
+          name: prism-windows-x64-${{ matrix.config }}
+          path: build/x64/Release/prism.exe
       - name: Test
         continue-on-error: true
         run: |
