--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -12,21 +12,24 @@ jobs:
     strategy:
       matrix:
         config: [Release, Debug]
+        standalone: [OFF, ON]
+        toolchain: [linux-gnu, linux-clang]
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: sudo apt-get install cmake ninja-build libbz2-dev
       - name: Build
         run: |
-          cmake -H. -Bbuild-cmake -GNinja -DCMAKE_BUILD_TYPE=${{ matrix.config }}
+          cmake -H. -Bbuild-cmake -GNinja -DCMAKE_BUILD_TYPE=${{ matrix.config }} -DPRISM_STANDALONE=${{ matrix.standalone }} -DCMAKE_TOOLCHAIN_FILE=cmake/toolchain/${{ matrix.toolchain }}.cmake
           cmake --build build-cmake -j
       - name: Create Package
+        if: ${{ matrix.config == 'Release' && matrix.standalone == 'ON' && matrix.toolchain == 'linux-gnu' }}
         run: |
           mkdir prism-release
           cp build-cmake/prism prism-release/
           cp "$(ldconfig -p | grep libbz2.so.1.0 | tr ' ' '\n' | grep /| head -n1)" prism-release/
       - name: Publish packaged artifacts
-        if: ${{ matrix.config == 'Release' }}
+        if: ${{ matrix.config == 'Release' && matrix.standalone == 'ON' && matrix.toolchain == 'linux-gnu' }}
         uses: actions/upload-artifact@v4
         with:
           name: prism-linux-x64
