--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,23 +12,40 @@ jobs:
     strategy:
       matrix:
         config: [Release, Debug]
-        toolchain: [v143, clangcl]
+        toolchain: [windows-msvc, windows-clang-cl]
+        standalone: [OFF, ON]
+        generate: [Visual Studio 17 2022, Ninja]
+        arch: [x64, Win32]
+        exclude: 
+          - toolchain: windows-clang-cl
+            arch: Win32
     steps:
       - uses: actions/checkout@v4
-      - name: Build
+      - name: Build Visual Studio
+        if: ${{ matrix.generate == 'Visual Studio 17 2022' }}
         run: |
-          cmake -S . -B "build/x64" -G "Visual Studio 17 2022" -T ${{ matrix.toolchain }} -A x64 -DCMAKE_BUILD_TYPE:STRING=${{ matrix.config }}
-          cmake --build ./build/x64
+          cmake -S . -B "build/${{ matrix.arch }}" -G "${{ matrix.generate }}" -DCMAKE_TOOLCHAIN_FILE="cmake/toolchain/${{ matrix.toolchain }}.cmake" -DCMAKE_GENERATOR_PLATFORM=${{ matrix.arch }} -DCMAKE_BUILD_TYPE:STRING=${{ matrix.config }} -DPRISM_STANDALONE=${{ matrix.standalone }}
+          cmake --build ./build/${{ matrix.arch }}
+      - name: Setup Variables
+        if: ${{ matrix.generate == 'Ninja' }}
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: ${{ matrix.arch }}
+      - name: Build Ninja
+        if: ${{ matrix.generate == 'Ninja' }}
+        run: |
+          cmake -S . -B "build/${{ matrix.arch }}" -G "${{ matrix.generate }}" -DCMAKE_TOOLCHAIN_FILE="cmake/toolchain/${{ matrix.toolchain }}.cmake" -DCMAKE_BUILD_TYPE:STRING=${{ matrix.config }} -DPRISM_STANDALONE=${{ matrix.standalone }}
+          cmake --build ./build/${{ matrix.arch }}
       - name: Publish packaged artifacts
-        if: ${{ matrix.config == 'Release' }}
+        if: ${{ matrix.config == 'Release' && matrix.generate == 'Visual Studio 17 2022' && matrix.standalone == 'ON' }}
         uses: actions/upload-artifact@v4
         with:
-          name: prism-windows-x64-${{ matrix.config }}
-          path: build/x64/Release/prism.exe
+          name: prism-windows-${{ matrix.arch }}-${{ matrix.config }}
+          path: build/${{ matrix.arch }}/${{ matrix.config }}/prism.exe
       - name: Test
         continue-on-error: true
         run: |
-          cd build/x64
+          cd build/${{ matrix.arch }}
           ctest -j -C Debug
       - name: Echo Test Results
-        run: cat build/x64/Testing/Temporary/LastTest.log
+        run: cat build/${{ matrix.arch }}/Testing/Temporary/LastTest.log
