--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,7 @@ else()
             GIT_REPOSITORY https://github.com/gabime/spdlog.git
             GIT_TAG 7e635fca68d014934b4af8a1cf874f63989352b7
         )
+        FetchContent_MakeAvailable(spdlog)
     endif()
     target_link_libraries(${PROJECT_NAME} PUBLIC spdlog::spdlog)
 endif()
