--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -14,7 +14,8 @@ jobs:
         config: [Release, Debug]
         standalone: [OFF, ON]
         toolchain: [linux-gnu, linux-clang]
-        isPR: ${{ github.event_name == 'pull_request' }}
+        isPR: 
+          - ${{ github.event_name == 'pull_request' }}
         exclude:
           - isPR: true
             standalone: OFF
