--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -16,7 +16,8 @@ jobs:
         standalone: [OFF, ON]
         generate: [Visual Studio 17 2022, Ninja]
         arch: [x64, Win32]
-        isPR: ${{ github.event_name == 'pull_request' }}
+        isPR: 
+          - ${{ github.event_name == 'pull_request' }}
         exclude: 
           - toolchain: windows-clang-cl
             arch: Win32
